# AI-PROCTOR

./: README.md  start_backend.py
ai-backend/: pyproject.toml
ai-backend/model/: activity_gesture_detection.py  ai_audio_detection.py  ai_text_detection_realtime.py  audio_monitoring.py  face_detection_realtime.py  main_api.py  requirements.txt
ai-interview-proctoring/: camera.html  candidate_browser.html  index.html  interviewer.html  interviewer_live.html  interviewer_upload.html  next.html
backend/: package-lock.json  package.json  server.js
