[project]
name = "ai-backend"
version = "0.1.0"
description = "this is the test 1 for the env"
authors = [
    {name = "Asmi Vashista",email = "asmivashisth@gmail.com"}
]

requires-python = ">=3.10"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "dlib (>=20.0.0,<21.0.0)",
    "imutils (>=0.5.4,<0.6.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "yolov5 (>=7.0.14,<8.0.0)",
    "ultralytics (>=8.3.168,<9.0.0)",
    "webrtcvad (>=2.0.10,<3.0.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "whisper (>=1.1.10,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
